<resources>
    <string name="app_name">为我点赞(Pad)</string>

    <string name="switch_bluetooth_open">开启蓝牙</string>
    <string name="switch_bluetooth_close">关闭蓝牙</string>

    <string name="search_bluetooth">搜索设备</string>

    <string name="unpaired_bluetooth_tip">未连接设备</string>
    <string name="paired_bluetooth_tip">已连接设备</string>

    <string name="dialog_loading">请稍等...</string>

    <string name="bluetooth_loading">搜索蓝牙设备中...</string>

    <string name="remind">提醒</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <string name="switch_wifi">切换WIFI</string>
    <string name="finish_app">退出应用</string>
    <string name="mobile_net_watch">您当前为移动数据网络，点击确定切换WIFI</string>
    <string name="mobile_no_net">您当前未连接网络，点击确定切换WIFI</string>

    <string name="no_net">您的网络跟别人私奔去了！</string>
    <string name="net_time_out">网络请求超时</string>
    <string name="net_server_error">服务器发生了错误</string>
    <string name="unknow_error">发生未知错误</string>

</resources>
